# deadlock-stats-cli

./: .env.example  Cargo.toml  Makefile  README.md  build.rs  openapi.json
migrations/: 0001_init.sql  0002_matches.sql
src/: cli.rs  db.rs  deadlock.rs  lib.rs  main.rs  models.rs  steam.rs  ui.rs
tests/: db_ingest.rs  db_matches.rs  matches_json.rs  steam_tests.rs
