[package]
name = "deadlock-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dotenvy = "0.15"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
url = "2.5"
once_cell = "1.19"
httpdate = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono", "json"] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1.39", features = ["full"] }

[build-dependencies]
dotenvy = "0.15"

[features]
default = ["db"]
db = []
