[package]
name = "deadlock-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
comfy-table = "7.2.0"
dotenvy = "0.15.7"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
once_cell = "1.21.3"
httpdate = "1.0.3"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "chrono", "json"] }

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = ["db"]
db = []
